--- a/view-report.html
+++ b/view-report.html
@@ -6,10 +6,17 @@
     <title>Full Report View</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        @page {
+            size: A4;
+            margin: 0;
+        }
+
         @media print {
             body {
                 background: white;
                 padding: 0;
+                height: 100vh;
+                overflow: hidden;
             }
 
             .no-print {
@@ -20,85 +27,84 @@
                 border: none !important;
                 box-shadow: none !important;
                 width: 100% !important;
-                max-width: 100% !important;
-                padding: 0 !important;
-            }
-
-            /* Forces the browser to try and keep everything on one page */
-            .report-box {
-                height: 98vh;
+                height: 100vh !important;
+                padding: 1.5rem !important;
+                display: flex !important;
+                flex-direction: column !important;
             }
         }
 
-        /* Aspect ratio container for consistent image sizing */
+        /* Prevent images from taking more than 25% of the page height */
+        .dynamic-gallery {
+            max-height: 22vh;
+        }
+
         .img-container {
-            aspect-ratio: 4 / 3;
-            width: 100%;
+            aspect-ratio: 16 / 9;
+            height: 100%;
         }
     </style>
 </head>
 
 <body class="bg-gray-50 p-4 md:p-10">
-    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box flex flex-col justify-between"
-        style="min-height: 297mm;">
+    <div
+        class="max-w-4xl mx-auto bg-white p-8 border shadow-sm rounded-lg report-box flex flex-col h-[290mm] overflow-hidden">
 
-        <div>
-            <div class="border-b-4 border-blue-900 pb-4 mb-6 flex justify-between items-center">
-                <div class="flex items-center gap-3">
-                    <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
-                    <div>
-                        <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
-                        <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
-                            Pendidikan</p>
-                    </div>
+        <div class="border-b-4 border-blue-900 pb-4 mb-4 flex justify-between items-center flex-shrink-0">
+            <div class="flex items-center gap-3">
+                <img src="KPM Logo.png" alt="Logo" class="h-10 w-auto">
+                <div>
+                    <h1 class="text-2xl font-black text-blue-900 italic leading-none">eReport</h1>
+                    <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                        Pendidikan</p>
                 </div>
-                <div class="text-right">
-                    <h2 id="vProgram" class="text-xl font-black text-slate-800 uppercase leading-tight">...</h2>
-                    <p id="vUnit" class="text-blue-600 text-[10px] font-bold tracking-widest uppercase"></p>
-                </div>
-            </div>
-
-            <div class="space-y-6">
-                <section>
-                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Program
-                        Objective</h2>
-                    <p id="vObjective"
-                        class="text-md text-slate-700 leading-snug border-l-2 border-blue-100 pl-4 italic"></p>
-                </section>
-
-                <section>
-                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-2 uppercase italic">Photographic
-                        Evidence</h2>
-                    <div id="vGallery" class="grid gap-2 w-full">
-                    </div>
-                </section>
-
-                <section>
-                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed
-                        Report</h2>
-                    <div id="vFull" class="text-sm text-slate-800 leading-relaxed whitespace-pre-wrap"></div>
-                </section>
-            </div>
-        </div>
-
-        <div class="pt-4 border-t border-gray-100 flex justify-between items-end mb-4">
-            <div>
-                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest">Reported By</p>
-                <p id="vName" class="text-md font-bold text-slate-700"></p>
-                <div class="w-32 border-b border-gray-300 mt-8"></div>
             </div>
             <div class="text-right">
-                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest">Date of Program</p>
-                <p id="vDate" class="text-md font-bold text-slate-700"></p>
+                <h2 id="vProgram" class="text-lg font-black text-slate-800 uppercase leading-tight">...</h2>
+                <p id="vUnit" class="text-blue-600 text-[10px] font-bold tracking-widest uppercase"></p>
             </div>
         </div>
 
-        <div class="no-print flex gap-3 mb-4">
+        <div class="flex-grow flex flex-col gap-4 overflow-hidden">
+
+            <section class="flex-shrink-0">
+                <h2 class="text-[9px] font-black text-slate-400 tracking-widest uppercase italic">Program Objective</h2>
+                <p id="vObjective" class="text-sm text-slate-700 leading-tight border-l-2 border-blue-100 pl-3 italic">
+                </p>
+            </section>
+
+            <section class="flex-shrink-0">
+                <h2 class="text-[9px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Photographic
+                    Evidence</h2>
+                <div id="vGallery" class="dynamic-gallery grid gap-2 w-full overflow-hidden">
+                </div>
+            </section>
+
+            <section class="flex-grow overflow-hidden">
+                <h2 class="text-[9px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed Report
+                </h2>
+                <div id="vFull" class="text-xs text-slate-800 leading-relaxed whitespace-pre-wrap overflow-hidden">
+                </div>
+            </section>
+        </div>
+
+        <div class="mt-4 pt-4 border-t border-gray-100 flex justify-between items-end flex-shrink-0">
+            <div>
+                <div class="w-32 border-b border-gray-300 mb-2 h-10"></div>
+                <p class="text-[9px] text-gray-400 uppercase font-bold tracking-widest">Reported By</p>
+                <p id="vName" class="text-sm font-bold text-slate-700"></p>
+            </div>
+            <div class="text-right">
+                <p class="text-[9px] text-gray-400 uppercase font-bold tracking-widest">Date of Program</p>
+                <p id="vDate" class="text-sm font-bold text-slate-700"></p>
+            </div>
+        </div>
+
+        <div class="mt-4 no-print flex gap-3 flex-shrink-0">
             <button onclick="window.print()"
-                class="bg-blue-600 text-white px-6 py-2 rounded-lg font-bold shadow-md hover:bg-blue-700 transition">Download
-                PDF</button>
+                class="bg-blue-600 text-white px-5 py-2 rounded-lg text-sm font-bold">Download PDF</button>
             <button onclick="window.location.href='dashboard.html'"
-                class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg font-bold">Back</button>
+                class="bg-gray-200 text-gray-700 px-5 py-2 rounded-lg text-sm font-bold">Back</button>
         </div>
     </div>
 
@@ -106,6 +112,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+        // ... [Firebase Config remains the same] ...
         const firebaseConfig = {
             apiKey: "AIzaSyCR9EPwlakRDXN1v6Rm19ro7XvowvBnY2k",
             authDomain: "jpns-ereport.firebaseapp.com",
@@ -130,14 +137,13 @@
                 document.getElementById('vDate').innerText = data.date;
                 document.getElementById('vName').innerText = data.name;
                 document.getElementById('vObjective').innerText = data.objective || "N/A";
-                document.getElementById('vFull').innerText = data.fullReport || "No details provided.";
+                document.getElementById('vFull').innerText = data.fullReport || "N/A";
 
                 const gallery = document.getElementById('vGallery');
                 const images = data.imageUrls || [];
 
-                // Logic: Automatically set grid columns based on image count (max 5 per row)
-                const count = images.length;
-                const cols = count > 5 ? 5 : count;
+                // Set columns based on count
+                const cols = images.length > 4 ? 4 : images.length;
                 gallery.style.gridTemplateColumns = `repeat(${cols}, minmax(0, 1fr))`;
 
                 images.forEach(url => {
