--- a/view-report.html
+++ b/view-report.html
@@ -15,6 +15,7 @@
             body {
                 background: white;
                 padding: 0;
+                margin: 0;
                 height: 100vh;
                 overflow: hidden;
             }
@@ -26,85 +27,109 @@
             .report-box {
                 border: none !important;
                 box-shadow: none !important;
-                width: 100% !important;
+                width: 100vw !important;
+                max-width: 100vw !important;
                 height: 100vh !important;
-                padding: 1.5rem !important;
-                display: flex !important;
-                flex-direction: column !important;
+                max-height: 100vh !important;
+                padding: 15mm !important;
+                margin: 0 !important;
             }
         }
 
         /* Prevent images from taking more than 25% of the page height */
         .dynamic-gallery {
-            max-height: 22vh;
+            max-height: 220px;
         }
 
         .img-container {
             aspect-ratio: 16 / 9;
             height: 100%;
         }
+
+        /* Hide scrollbar for clean UI */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
     </style>
 </head>
 
-<body class="bg-gray-50 p-4 md:p-10">
-    <div
-        class="max-w-4xl mx-auto bg-white p-8 border shadow-sm rounded-lg report-box flex flex-col h-[290mm] overflow-hidden">
+<body class="bg-gray-100 p-4 md:p-8 flex flex-col items-center min-h-screen">
 
-        <div class="border-b-4 border-blue-900 pb-4 mb-4 flex justify-between items-center flex-shrink-0">
-            <div class="flex items-center gap-3">
-                <img src="KPM Logo.png" alt="Logo" class="h-10 w-auto">
+    <!-- Action Buttons (Hidden in Print) -->
+    <div class="w-full max-w-[210mm] flex justify-end gap-3 mb-4 no-print shrink-0 mx-auto">
+        <button onclick="window.location.href='dashboard.html'"
+            class="bg-white border text-gray-700 px-6 py-2 rounded shadow-sm text-sm font-bold hover:bg-gray-50 transition-colors">Back</button>
+        <button onclick="window.print()"
+            class="bg-blue-600 text-white px-6 py-2 rounded shadow-sm text-sm font-bold hover:bg-blue-700 transition-colors">Download
+            PDF</button>
+    </div>
+
+    <!-- The A4 Printable Area -->
+    <div
+        class="w-full max-w-[210mm] mx-auto bg-white p-8 md:p-12 border border-gray-200 shadow-xl report-box flex flex-col h-[297mm] overflow-hidden shrink-0 relative rounded-lg print:rounded-none">
+
+        <!-- Header -->
+        <div class="border-b-[3px] border-blue-900 pb-4 mb-5 flex justify-between items-end flex-shrink-0">
+            <div class="flex items-center gap-4">
+                <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto object-contain">
                 <div>
-                    <h1 class="text-2xl font-black text-blue-900 italic leading-none">eReport</h1>
-                    <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                    <h1 class="text-3xl font-black text-blue-900 italic leading-none mb-1">eReport</h1>
+                    <p class="text-[10px] font-bold text-gray-500 uppercase tracking-widest">Sektor Sumber dan Teknologi
                         Pendidikan</p>
                 </div>
             </div>
-            <div class="text-right">
-                <h2 id="vProgram" class="text-lg font-black text-slate-800 uppercase leading-tight">...</h2>
-                <p id="vUnit" class="text-blue-600 text-[10px] font-bold tracking-widest uppercase"></p>
+            <div class="text-right max-w-[50%]">
+                <p id="vUnit" class="text-blue-600 text-[10px] font-bold tracking-widest uppercase mb-1"></p>
+                <h2 id="vProgram" class="text-lg font-black text-slate-800 uppercase leading-tight line-clamp-2">...
+                </h2>
             </div>
         </div>
 
-        <div class="flex-grow flex flex-col gap-4 overflow-hidden">
+        <div class="flex-grow flex flex-col gap-5 overflow-hidden">
 
+            <!-- Objective Section -->
             <section class="flex-shrink-0">
-                <h2 class="text-[9px] font-black text-slate-400 tracking-widest uppercase italic">Program Objective</h2>
-                <p id="vObjective" class="text-sm text-slate-700 leading-tight border-l-2 border-blue-100 pl-3 italic">
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest uppercase mb-2">Program Objective</h2>
+                <p id="vObjective"
+                    class="text-sm text-slate-700 leading-relaxed border-l-[3px] border-blue-200 pl-4 font-medium italic">
                 </p>
             </section>
 
+            <!-- Gallery Section -->
             <section class="flex-shrink-0">
-                <h2 class="text-[9px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Photographic
-                    Evidence</h2>
-                <div id="vGallery" class="dynamic-gallery grid gap-2 w-full overflow-hidden">
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest uppercase mb-2">Photographic Evidence
+                </h2>
+                <div id="vGallery" class="dynamic-gallery grid gap-3 w-full overflow-hidden rounded-md">
                 </div>
             </section>
 
-            <section class="flex-grow overflow-hidden">
-                <h2 class="text-[9px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed Report
-                </h2>
-                <div id="vFull" class="text-xs text-slate-800 leading-relaxed whitespace-pre-wrap overflow-hidden">
+            <!-- Detailed Report Section -->
+            <section class="flex-grow overflow-hidden flex flex-col min-h-0">
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest uppercase mb-2">Detailed Report</h2>
+                <div class="flex-grow overflow-y-auto no-scrollbar pb-2 relative text-fit-container">
+                    <div id="vFull"
+                        class="text-[14px] text-slate-800 leading-relaxed text-justify whitespace-pre-wrap columns-1 md:columns-2 gap-8">
+                    </div>
                 </div>
             </section>
         </div>
 
-        <div class="mt-4 pt-4 border-t border-gray-100 flex justify-between items-end flex-shrink-0">
+        <!-- Footer Signatures -->
+        <div class="mt-5 pt-4 border-t-2 border-slate-100 flex justify-between items-end flex-shrink-0">
             <div>
-                <div class="w-32 border-b border-gray-300 mb-2 h-10"></div>
-                <p class="text-[9px] text-gray-400 uppercase font-bold tracking-widest">Reported By</p>
-                <p id="vName" class="text-sm font-bold text-slate-700"></p>
+                <div class="w-40 border-b border-gray-300 mb-2 h-10"></div>
+                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest mb-1">Reported By</p>
+                <p id="vName" class="text-sm font-bold text-slate-800"></p>
             </div>
             <div class="text-right">
-                <p class="text-[9px] text-gray-400 uppercase font-bold tracking-widest">Date of Program</p>
-                <p id="vDate" class="text-sm font-bold text-slate-700"></p>
+                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest mb-1">Date of Program</p>
+                <p id="vDate" class="text-sm font-bold text-slate-800"></p>
             </div>
-        </div>
-
-        <div class="mt-4 no-print flex gap-3 flex-shrink-0">
-            <button onclick="window.print()"
-                class="bg-blue-600 text-white px-5 py-2 rounded-lg text-sm font-bold">Download PDF</button>
-            <button onclick="window.location.href='dashboard.html'"
-                class="bg-gray-200 text-gray-700 px-5 py-2 rounded-lg text-sm font-bold">Back</button>
         </div>
     </div>
 
@@ -148,10 +173,24 @@
 
                 images.forEach(url => {
                     gallery.innerHTML += `
-                        <div class="img-container bg-gray-50 rounded border overflow-hidden">
+                        <div class="img-container bg-slate-100 rounded-md border border-slate-200 overflow-hidden shadow-sm">
                             <img src="${url}" class="w-full h-full object-cover">
                         </div>`;
                 });
+
+                // Auto-fit text logic to ensure it stays on one page without cutting off manually
+                setTimeout(() => {
+                    const contentContainer = document.getElementById('vFull').parentElement;
+                    const content = document.getElementById('vFull');
+                    let currentSize = 14; // Start at 14px text
+
+                    // Reduce font size until it fits, bounding minimum to 9px
+                    while (content.scrollHeight > contentContainer.clientHeight && currentSize > 9) {
+                        currentSize -= 0.5;
+                        content.style.fontSize = currentSize + 'px';
+                        content.style.lineHeight = '1.4';
+                    }
+                }, 100);
             }
         }
     </script>
